[ADD] getAllStocks swagger
